--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,7 @@ name = "dosage-info"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.8"
+dependencies = [
+    "streamlit>=1.28.0"
+]
