--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "streamlit>=1.28.0"
+    "pandas>=2.3.2",
+    "streamlit>=1.28.0",
 ]
